[tool:pytest]
minversion = 6.0
addopts = --cov-report html --cov-report xml --cov-config=.coveragerc --cov=src -vv
testpaths = 
  tests
asyncio_mode = auto

[metadata]
name = loggersfactory16
version = 0.0.1
author = Terence
author_email = terence_kong2002@hotmail.com
description = A logging factory wrapper for loguru and elasticsearch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reshinto/loggerfactory
project_urls =
    Bug Tracker = https://github.com/reshinto/loggerfactory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
  elasticsearch[async]==7.15.0
  elasticsearch-dbapi
  loguru
  pandas
  aiohttp

[options.packages.find]
where = src